ndb - bug#47966   ndbmtd can over allocate undo-buffer, prevent this by keeping track     of how much has been promised, but not yet consumed